--- a/fesapade/src/index.html
+++ b/fesapade/src/index.html
@@ -6,6 +6,13 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+ 
+<!-- Font Awesome es una blibioteca de iconos y tipos de letras-->
+<link rel="stylesheet" href="assets/Font-Awesome/css/all.min.css">
+
+<!-- Font Awesome es una blibioteca de iconos y tipos de letras-->
+<link rel="stylesheet" href="assets/bootstrapmio.css">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 </head>
 <body>
   <app-root></app-root>
