--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -69,9 +69,8 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h3>Hello! </h3>
                     <h1>I<span style="color: #789463;">'</span>m Ronald Coto</h1>
-                    <h2>Frontend Developer</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde iure, hic, esse odit vero
-                        reiciendis obcaecati qui quas animi alias modi impedit maiores consequuntur molestiae!</p>
+                    <h2>Web Developer & Designer</h2>
+                    <p>Good level experience in web design and development knowledge, producing quality work.</p>
                     <div class="btn_container">
                         <button class="btn btn-light animate_animated">Hire me</button>
 
@@ -344,33 +343,40 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <nav class="d-flex justify-content-center">
                         <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
-                            <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home"
-                                role="tab" aria-controls="nav-home" aria-selected="true">Recent works</a>
-                            <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile"
-                                role="tab" aria-controls="nav-profile" aria-selected="false">Another works</a>
+                            <a class="nav-item nav-link active text-white" id="nav-home-tab" data-toggle="tab"
+                                href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Recent
+                                works</a>
+                            <a class="nav-item nav-link text-white" id="nav-profile-tab" data-toggle="tab"
+                                href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Another
+                                works</a>
                         </div>
                     </nav>
                     <div class="tab-content py-3 px-3 px-sm-0" id="nav-tabContent">
                         <div class="tab-pane fade show active" id="nav-home" role="tabpanel"
                             aria-labelledby="nav-home-tab">
-                            <div class="card-columns">      
+                            <div class="card-columns">
                                 <div class="card border-0 padding-0">
-                                    <img class="card-img-top" src="images/portfolio/fesapade.png" alt="">
+                                    <img class="card-img-top" src="images/portfolio/rsz_fesapadess.png" alt="">
                                 </div>
                                 <div class="card border-0 padding-0">
-                                    <img class="card-img-top" src="" alt="">
+                                    <img class="card-img-top" src="images/portfolio/rsz_2petyaangular_1.png" alt="">
                                 </div>
 
                             </div>
                         </div>
                         <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-                            Et et consectetur ipsum labore excepteur est proident excepteur ad velit occaecat qui minim
-                            occaecat veniam. Fugiat veniam incididunt anim aliqua enim pariatur veniam sunt est aute sit
-                            dolor anim. Velit non irure adipisicing aliqua ullamco irure incididunt irure non esse
-                            consectetur nostrud minim non minim occaecat. Amet duis do nisi duis veniam non est eiusmod
-                            tempor incididunt tempor dolor ipsum in qui sit. Exercitation mollit sit culpa nisi culpa
-                            non adipisicing reprehenderit do dolore. Duis reprehenderit occaecat anim ullamco ad duis
-                            occaecat ex.
+                            <div class="card-columns">
+                                <div class="card border-0 padding-0">
+                                    <img class="card-img-top" src="images/portfolio/rsz_homarket.png" alt="">
+                                </div>
+                                <div class="card border-0 padding-0">
+                                    <img class="card-img-top" src="images/portfolio/rsz_2sushi-in.png" alt="">
+                                </div>
+                                <div class="card border-0 padding-0">
+                                    <img class="card-img-top" src="images/portfolio/rsz_segundodesafio.png" alt="">
+                                </div>
+
+                            </div>
                         </div>
                     </div>
                 </div>
